// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompliancePolicies expect to render an error 1`] = `
<ErrorPage
  error={
    Object {
      "error": "Test Error loading",
      "networkError": Object {
        "statusCode": 500,
      },
    }
  }
/>
`;

exports[`CompliancePolicies expect to render emptystate 1`] = `
<Fragment>
  <PageHeader>
    <PageHeaderTitle
      title="Compliance policies"
    />
    <withRouter(Connect(RouterParams)) />
  </PageHeader>
  <Connect(Main)>
    <withRouter(Connect(RouterParams))
      policies={Array []}
    />
  </Connect(Main)>
</Fragment>
`;

exports[`CompliancePolicies expect to render loading 1`] = `
<Fragment>
  <PageHeader>
    <PageHeaderTitle
      title="Compliance policies"
    />
  </PageHeader>
  <Connect(Main)>
    <LoadingPoliciesTable />
  </Connect(Main)>
</Fragment>
`;

exports[`CompliancePolicies expect to render without error 1`] = `
<Fragment>
  <PageHeader>
    <PageHeaderTitle
      title="Compliance policies"
    />
    <withRouter(Connect(RouterParams)) />
  </PageHeader>
  <Connect(Main)>
    <withRouter(Connect(RouterParams))
      policies={
        Array [
          undefined,
        ]
      }
    />
  </Connect(Main)>
</Fragment>
`;
